--- a/src/pages/HomePage/PopularCoinCard.css
+++ b/src/pages/HomePage/PopularCoinCard.css
@@ -9,9 +9,25 @@
 .popular-coin-card {
     display: grid;
     text-decoration: none;
-    grid-template-columns: 1fr 1fr 0.8fr;
+    grid-template-columns: 1fr 1fr 1fr;
     padding: 0.4rem 0.8rem;
     border: 0.2rem solid var(--color-primary);
+    text-overflow: ellipsis;
+}
+
+.popular-coin-meta > * {
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.popular-coin-card .coin-name {
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.popular-coin-data {
+    place-self: center;
+    place-items: center;
 }
 
 .popular-coin-card-section {
@@ -33,7 +49,6 @@
 }
 
 .popular-coin-card .popular-coin-meta {
-    width: 100%;
     display: grid;
     grid-template-columns: 2.4rem 1fr;
     column-gap: 0.4rem;
@@ -75,9 +90,6 @@
 @media (min-width: 768px) and (max-width: 991px) {
     #coin-card-1 .popular-coin-card-section, #coin-card-2 .popular-coin-card-section, #coin-card-3 .popular-coin-card-section {
         border: none;
-    }
-    .popular-coin-card {
-        grid-template-columns: 12rem 1fr 12rem;
     }
     #coin-card-1 .popular-coin-data, 
     #coin-card-2 .popular-coin-data, 
